# rjags

./: DESCRIPTION  INSTALL  NAMESPACE  README  aclocal.m4  configure  configure.ac  configure.win
R/: dic.R  jags.R  jags.object.R  mcarray.R  read.data.R  utilities.R  zzz.R  zzz.R.in
R/unix/: progress.bar.R  zzz.R  zzz.R.in
R/windows/: progress.bar.R  zzz.R  zzz.R.in
man/: adapt.Rd  coda.samples.Rd  dic.samples.Rd  diffdic.Rd  jags.model.Rd  jags.module.Rd  jags.object.Rd  jags.samples.Rd  jags.seed.Rd  model.samples.Rd  parallel.Rd  read.data.Rd
src/: Makevars  Makevars.in  Makevars.win  init.c  jags.cc  moddir.c  parallel.cc
